infra/k8s/expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration # Tell the deployment which pods it should be creating and managing
  template: # Describe the pod that will be created
    metadata:
      labels:
        app: expiration
    spec:
      containers: # List of containers that should be running inside the pod
        - name: expiration # Name of the container, only used within the pod, not externally, for logging purposes
          image: easymomo/expiration
