infra/k8s/nats.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
            "-p", # port
            "4222",
            "-m", # monitoring port
            "8222",
            "-hbi", # heartbeat interval, how often the server will send a heartbeat to the client
            "5s",
            "-hbt", # heartbeat timeout, how long the server will wait for a heartbeat response from the client
            "5s",
            "-hbf", # heartbeat fail count, how many times the server will allow a client to not respond to a heartbeat
            "2",
            "-SD", # store type
            "-cid", # cluster id
            "ticketing", # cluster id name
          ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        app: nats
    ports:
      - name: client
        protocol: TCP
        port: 4222
        targetPort: 4222
      - name: monitoring
        protocol: TCP
        port: 8222
        targetPort: 8222
