infra/k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders # Tell the deployment which pods it should be creating and managing
  template: # Describe the pod that will be created
    metadata:
      labels:
        app: orders
    spec:
      containers: # List of containers that should be running inside the pod
        - name: orders # Name of the container, only used within the pod, not externally, for logging purposes
          image: easymomo/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
