infra/k8s/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments # Tell the deployment which pods it should be creating and managing
  template: # Describe the pod that will be created
    metadata:
      labels:
        app: payments
    spec:
      containers: # List of containers that should be running inside the pod
        - name: payments # Name of the container, only used within the pod, not externally, for logging purposes
          image: easymomo/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
