infra/k8s/tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets # Tell the deployment which pods it should be creating and managing
  template: # Describe the pod that will be created
    metadata:
      labels:
        app: tickets
    spec:
      containers: # List of containers that should be running inside the pod
        - name: tickets # Name of the container, only used within the pod, not externally, for logging purposes
          image: easymomo/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
