infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: payments-cluster-ip-service
                  port:
                    number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: auth-cluster-ip-service
                  port:
                    number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: tickets-cluster-ip-service
                  port:
                    number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: orders-cluster-ip-service
                  port:
                    number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
                service:
                  name: client-cluster-ip-service
                  port:
                    number: 3000
